--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ She's a beaut, isn't she?
         
         <meta name="viewport" content="width=device-width, user-scalable=yes">
                 
+		<link rel="icon" href="heart.ico">
+
         <!--css-->
         <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
