--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ She's a beaut, isn't she?
 -->
 <html>
     <head>
-        <title>EmmaPHP - User Guide</title>
+        <title>EmmaPHP</title>
         
         <meta name="viewport" content="width=device-width, user-scalable=yes">
                 
