--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ She's a beaut, isn't she?
 						<br/>
 						<li><a href="#parameters"><b>Parameters</b></a></li>
 						<li><a href="#redirecting"><b>Redirecting</b></a></li>
-						<li><a href="#sessions"><b>sessions</b></a></li>
+						<li><a href="#sessions"><b>Sessions</b></a></li>
                     </ul>
                 
                     <!--configuration-->
