--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@ She's a beaut, isn't she?
                         while config/database.php is for setting all database variables.<br/>
                         Then there's ./web_config, it's in the root directory for a reason,<br/>
                         <b>so do not drag it into the config folder.</b><br/>
-                        ./web_config.php is for defining any of your own constants and for setting<br/>
-                        the title, basepath and such.
+                        <br/>
+						<b>It is very important that the EmmaPHP framework knows where it is.</b><br/>
+						Please set the "BASEPATH" constant to the URL location of the framework.<br/>
+
                     </div>
                     <!--configuration end-->
                     
