--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ class DataModel extends EmmaModel {
 <br/>
                         After examinating the code you will notice that<br/>
                         a loaded model will be dynamically created into an object in the local scope.<br/>
-                        You may access your homemade model instance through <span class="pink">$this->Data_model</span>, or whatever you named it.<br/>
+                        You may access your homemade model instance through <span class="pink">$this->DataModel</span>, or whatever you named it.<br/>
                         <b>Note that your homemade models have public access modifiers,<br/>
                             so /do not/ forget to make sensetive data private.</b>
                         
