--- a/index.html
+++ b/index.html
@@ -750,9 +750,9 @@ $autoload = array ("UserModel", "DataModel", "BikiniModel");
                         <span class="pink">Mods</span> are pretty much libraries though a little more powerful.<br/>
                         <br/>
                         <b>What is a mod</b><br/>
-                        For something to be a <span class="pink">mod</span> it just has to be a PHP class.<br/>
+                        For something to be a <span class="pink">Mod</span> it just has to be a PHP class.<br/>
                         Any native PHP class will run perfectly fine within <span class="pink">EmmaPHP</span>.<br/>
-                        Here's an example of a mod:<br/><br/>
+                        Here's an example of a <span class="pink">Mod</span>:<br/><br/>
 <pre>
     class EchoBack {
 
@@ -765,20 +765,22 @@ $autoload = array ("UserModel", "DataModel", "BikiniModel");
     }
 </pre>
                         <br/>
-                        Now this is just an example and it isn't such a great <span class="pink">mod</span>.<br/>
-                        But this -- nonetheless -- is a perfectly fine mod.<br/>
+                        Now this is just an example and it isn't such a great <span class="pink">Mod</span>.<br/>
+                        But this -- nonetheless -- is a perfectly fine <span class="pink">Mod</span>.<br/>
                         <br/>
-                        A mod can do anything.<br/>
+                        A <span class="pink">Mod</span> can do anything.<br/>
                         <br/>
                         <b>How do I load a mod</b><br/>
-                        Loading a mod is terrifyingly simple.<br/>
-                        All you have to do is drag it into the Mods folder and that's it,<br/>
+                        Loading a <span class="pink">Mod</span> is terrifyingly simple.<br/>
+                        All you have to do is drag it into the <span class="pink">Mods</span> folder and that's it,<br/>
                         done, the <span class="pink">Framework</span> will load it automatically.<br/>
                         <br/>
                         <b>But what /is/ the difference between a mod and a library?</b><br/>
                         The difference between a <span class="pink">Mod</span> is that it can be ran anywhere.<br/>
-                        You could mod the entire <span class="pink">Framework</span> to bits using your mods.<br/>
+                        You could mod the entire <span class="pink">Framework</span> to bits using your <span class="pink">Mods</span>.<br/>
                         Literaly /anywhere/ in the code you can call to your mod after it's loaded in by the <span class="pink">Core</span>.<br/>
+                        <br/>
+                        Hence why it's named a <span class="pink">Mod</span>.
                         <br/>
                         <b>How to use my mod</b><br/>
                         Using a <span class="pink">Mod</span> is like using a class.<br/>
