--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@ $autoload = array ("UserModel", "DataModel", "BikiniModel");
                         You could mod the entire <span class="pink">Framework</span> to bits using your <span class="pink">Mods</span>.<br/>
                         Literaly /anywhere/ in the code you can call to your mod after it's loaded in by the <span class="pink">Core</span>.<br/>
                         <br/>
-                        Hence why it's named a <span class="pink">Mod</span>.
+                        Hence why it's named a <span class="pink">Mod</span>.<br/>
                         <br/>
                         <b>How to use my mod</b><br/>
                         Using a <span class="pink">Mod</span> is like using a class.<br/>
