added autoloader to index

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ She's a beaut, isn't she?
 						<li><a href="#parameters"><b>Parameters</b></a></li>
 						<li><a href="#redirecting"><b>Redirecting</b></a></li>
 						<li><a href="#sessions"><b>Sessions</b></a></li>
+                        <li><a href="#autoloader"><b>Autoloader</b></a></li>
                         <li><a href="#security"><b>Security</b></a></li>
                         <li><a href="#mods"><b>Mods</b></a></li>
                     </ul>
