--- a/index.html
+++ b/index.html
@@ -476,10 +476,10 @@ public function getUser ($id) {
     $this->UserModel->getUser ($id)->email;
 
     //If you only want the fullname from the column "fullname".
-    $this->UserModle->getUser ($id)->fullname;
+    $this->UserModel->getUser ($id)->fullname;
 
     //If you only want the id from the column "id".
-    $this->UserModle->getUser ($id)->id;
+    $this->UserModel->getUser ($id)->id;
 
 </pre>
                         <br/>Easy, right?
