Last few things

--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@ She's a beaut, isn't she?
                                 <li>Using your homemade model</li><br/>
                             </ul>
                         <li><a href="#tables"><b>Tables</b></a></li>
+                        <ul>
+                            <li>EmmaTables</li>
+                            <li>Table Creation</li>
+                            <li>Loading a Table</li>
+                            <li>Fetching data with Tables</li>
+                            <li>Updating data</li>
+                            <li>Inserting data</li>
+                        </ul>
                         <li><a href="#views"><b>Views</b></a></li>
                         <ul>
                             <li>View creation</li>
@@ -605,7 +613,7 @@ $this->load->table ("UsersTable");
                         is when you need a table specifically in that and <i>only</i> that controller.</b><br/>
                         <br/>
 
-                        <br/><h2><b>Fetching data with tables</b></h2>
+                        <br/><h2><b>Fetching data with Tables</b></h2>
                         <br/>
                         Theres a few ways of using an <span class="pink">EmmaTable</span>.<br/>
                         With <span class="pink">EmmaTables</span> you can find data, update data and insert data.<br/>
