Some missing colouring

--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@ $this->session->nullify ("email");
 
                     <div id="autoloader" class="ug_item">
                         <h1 class="pink"><b>EmmaPHP::Autoloader</b></h1><br/>
-                        The autoloader is a System Component that automatically loads models and tables into the controller.<br/>
+                        The <span class="pink">AutoLoader</span> is a <span class="pink">System Component</span> that automatically loads <span class="pink">Models</span> and <span class="pink">Tables</span> into the <span class="pink">Controller</span>.<br/>
                         All it requires is a little configuration done in the <span class="pink">config/autoload.php</span><br/>
                         All you need to do is put the names of the <span class="pink">Models</span> and <span class="pink">Tables</span> their class names into the array like so:<br/>
                         <br/>
