--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ She's a beaut, isn't she?
                             <li>Loading a Table</li>
                             <li>Fetching data with Tables</li>
                             <li>Updating data</li>
+                            <li>Joining Tables</li>
                             <li>Inserting data</li>
                         </ul>
                         <li><a href="#views"><b>Views</b></a></li>
